Just adding Dockerfile to install dependencies - uses ubuntu/docker-dev image built locally (see docker-dev repo)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,19 @@
-FROM github/vsharma-dockerdev
+FROM github/ubuntu-dockerdev
 
-RUN yum -y update && \
-    yum -y install mysql-connector-python
+RUN apt-get update -qq
 
-RUN pip3.6 install pymysql
+RUN apt-get -qqy install \
+    python3-praw
 
-RUN mkdir /opt/scripts
-#COPY ../bin/* /opt/scripts
+RUN apt-get -qqy install \
+    inetutils-ping \
+    man
+
+RUN cpan -i CPAN \
+    Reddit::Client
+
+RUN mkdir -p /opt/scripts
+
+COPY scripts/* /opt/scripts/
+
+RUN chmod a+x /opt/scripts/*
