Install LWP::Protocol::https and dependencies to make Perl Reddit::Client work

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,13 +7,31 @@ RUN apt-get -qqy install \
 
 RUN apt-get -qqy install \
     inetutils-ping \
+    libio-socket-ssl-perl \
+    libcrypt-ssleay-perl \
+    libnet-ssleay-perl \
     man
 
 RUN cpan -i CPAN \
     Reddit::Client
 
-RUN mkdir -p /opt/scripts
+# It seems installing Reddit::Client through CPAN messes up with LWP::Protocol::https
+# Unfortunately Reddit::Client is not available through ubuntu packages
+# and have to be installed through cpan.
+# Thus installing LWP::Protocol::https after.
+#RUN apt-get -qqy install liblwp-protocol-https-perl
+
+RUN mkdir -p /opt/scripts && \
+    mkdir -p /opt/config
+
 
 COPY scripts/* /opt/scripts/
-
 RUN chmod a+x /opt/scripts/*
+
+#COPY config/* /opt/config/
+
+RUN apt-get -qqy install liblwp-protocol-https-perl
+
+RUN apt-get -qqy install python3-pip
+
+#RUN /opt/scripts/set_up.sh /Users/sharmava/Github/RedditBot/
