Install the code inside docker container and run a simple python3 http server to host static content

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,7 @@
 FROM github/ubuntu-dockerdev
 
-RUN apt-get update -qq
-
-RUN apt-get -qqy install \
+RUN apt-get update -qq && \
+    apt-get -y install \
     python3-praw
 
 RUN apt-get -qqy install \
@@ -15,6 +14,9 @@ RUN apt-get -qqy install \
 RUN cpan -i CPAN \
     Reddit::Client
 
+RUN pip3 install --upgrade praw && \
+    pip3 install --upgrade pip
+
 # It seems installing Reddit::Client through CPAN messes up with LWP::Protocol::https
 # Unfortunately Reddit::Client is not available through ubuntu packages
 # and have to be installed through cpan.
@@ -22,16 +24,20 @@ RUN cpan -i CPAN \
 #RUN apt-get -qqy install liblwp-protocol-https-perl
 
 RUN mkdir -p /opt/scripts && \
-    mkdir -p /opt/config
-
+    mkdir -p /opt/config && \
+    mkdir -p /opt/static
 
 COPY scripts/* /opt/scripts/
 RUN chmod a+x /opt/scripts/*
 
 #COPY config/* /opt/config/
 
-RUN apt-get -qqy install liblwp-protocol-https-perl
+RUN apt-get -y install liblwp-protocol-https-perl
 
-RUN apt-get -qqy install python3-pip
+# Run http server on port 8080
+EXPOSE  8080
+WORKDIR /opt/static/
+CMD ["python3", "-m", "http.server", "8080"]
 
-#RUN /opt/scripts/set_up.sh /Users/sharmava/Github/RedditBot/
+#CMD ["/opt/scripts/set_up.sh", "/Users/sharmava/Github/RedditBot/"]
+
